Fix Bug 319313 - Select KDE accounts file 'text field' overflows

FIXED-IN: 4.11.3
BUG: 319313