resources/shared/singlefileresourceconfigdialogbase.cpp
@@ -59,6 +59,7 @@ SingleFileResourceConfigDialogBase::SingleFileResourceConfigDialogBase( WId wind
   connect( ui.kcfg_MonitorFile, SIGNAL(toggled(bool)), SLOT(validate()) );
   ui.kcfg_Path->setFocus();
   QTimer::singleShot( 0, this, SLOT(validate()) );
+  setMinimumSize(600, 540);
   readConfig();
 }
 
@@ -76,7 +77,7 @@ void SingleFileResourceConfigDialogBase::writeConfig()
 void SingleFileResourceConfigDialogBase::readConfig()
 {
     KConfigGroup group( KGlobal::config(), "SingleFileResourceConfigDialogBase" );
-    const QSize sizeDialog = group.readEntry( "Size", QSize(600,500) );
+    const QSize sizeDialog = group.readEntry( "Size", QSize(600,540) );
     if ( sizeDialog.isValid() ) {
         resize( sizeDialog );
     }
